force-app/main/default/objects/Certifications__c/Certifications__c.object-meta.xml
<CustomObject>
    <label>Skills &amp; Certification</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Credentials ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills &amp; Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>