force-app/main/default/objects/Certifications__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Name__c</fullName>
    <label>Certification Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Certified Associate</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Business Analyst</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Platform App Builder</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Data Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Development Lifecycle and Deployment Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Identity and Access Management Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Integration Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Sharing and Visibility Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified System Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Application Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Heroku Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified B2B Solution Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified B2C Commerce Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified B2C Solution Architect</fullName>
            </value>
            <value>
                <fullName>Certified Technical Architect (CTA)</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Education Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Experience Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Field Service Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Nonprofit Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified OmniStudio Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Service Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Tableau CRM and Einstein Discovery Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified CPQ Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified User Experience Designer</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Strategy Designer</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified B2C Commerce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Industries CPQ Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>