force-app/main/default/objects/Certifications__c/fields/Completion_Date11__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date11__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>