force-app/main/default/objects/Certifications__c/fields/Contact_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_Formula__c</fullName>
    <formula>Contact__r.ContactName__c</formula>
    <label>Contact</label>
    <type>Text</type>
</CustomField>