force-app/main/default/objects/Certifications__c/fields/EMS_EM_Certification_Name15__c.field-meta.xml
<CustomField>
    <fullName>EMS_EM_Certification_Name15__c</fullName>
    <label>Certification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>