force-app/main/default/objects/Certifications__c/fields/Last_Used_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Project_Name__c</fullName>
    <label>Last Used Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>