force-app/main/default/objects/Certifications__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>