force-app/main/default/objects/Certifications__c/fields/Trailblazer_ID_or_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_ID_or_Public_URL__c</fullName>
    <label>Trailblazer ID or Public URL</label>
    <type>Url</type>
</CustomField>