force-app/main/default/objects/Certifications__c/validationRules/Other_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Certification_Name__c,&quot;Other&quot;),ISBLANK( Other__c ))</errorConditionFormula>
    <errorMessage>Please enter the other certification names.</errorMessage>
</ValidationRule>