force-app/main/default/objects/Certifications__c/listViews/My_Skills_and_Certifications.listView-meta.xml
<ListView>
    <fullName>My_Skills_and_Certifications</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Certification_Name__c</columns>
    <columns>Other__c</columns>
    <columns>Skill__c</columns>
    <columns>Skill_Rating__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Skills and Certifications</label>
</ListView>